# youtube-download-service

./: .gitignore  README.md  docker-compose.yml
project/: .dockerignore  .pre-commit-config.yaml  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
project/app/: db.py  exceptions.py  main.py  models.py  settings.py
project/app/services/: service.py  shazam.py  youtube.py
project/migrations/: env.py
project/migrations/versions/: 486aae47746e_metadata.py  842abcd80d3e_init.py  f68b489cdeb0_add_year.py
project/tests/: conftest.py  test_download_youtube_audio.py  test_recognize_audio.py
